﻿wersja 9.4.5 - 2021-08-01
- przyspieszenie ładowania kanałów z grup dla playlisty

wersja 9.4.4 - 2021-07-31
- poprawka paska postepu czasu
- dodany nowy serwis Telewizja Polska

wersja 9.4.3 - 2021-07-20
- zaktualizowana opcja wybierania klawiszy
- usunięte błędy

wersja 9.4.2 - 2021-07-08
- zaktualizowane menu kontekstowe i menu boczne
- zaktualizowana opcja wybierania skórek

wersja 9.4.1 - 2021-07-06
- zaktualizowano rozpoznawanie kanałów z archiwum

wersja 9.4.0 - 2021-06-27
- naprawiono migotanie paska czasu
- zaktualizowane tłumaczenia

wersja 9.3.9 - 2021-06-21
- dodano ulepszone rozpoznawanie kanałów
- aktualizacja bazy mapowej

wersja 9.3.8 - 2021-06-09
- dodana opcja wykrywania alternatywnych nazw kanałów

wersja 9.3.7 - 2021-06-04
- poprawka odpalenia protokołu .mpd w inputstream helper

wersja 9.3.6 - 2021-06-03
- dodano ikonę nadzoru rodzicielskiego w vosd
- poprawiono wydajność działania
- usunięte błędy

wersja 9.3.5 - 2021-05-31
- zaktualizowany algorytm kategorii programu
- usunięte błędy

wersja 9.3.4 - 2021-05-23
- poprawka działania archiwum

wersja 9.3.3 - 2021-05-22
- optymalizacje
- usunięte błędy

wersja 9.3.2 - 2021-05-19
- poprawka memoryerror przy szybkim parsowaniu epg
- poprawiono wydajność działania
- usunięte błędy

wersja 9.3.1 - 2021-05-12
- dodana opcja wprowadzenia kanałów bez epg 
- poprawka błędu parsowania
- dodana opcja nagrywaj i oglądaj
- dodano ustawienie aby kontynuować odtwarzanie, nagrywanie i
pobieranie usług w tle po zakonczeniu wtyczki

wersja 9.3.0 - 2021-04-13
- poprawka nagrywania z serwisu WP Pilot
- dodana funkcja timeshift do serwisu Telia Play
- poprawka błędu szyfrowania
- naprawiono przycisk resetowania w menu pobierania
- dodano wskaźnik prędkości pobierania
- usunięte błędy

wersja 9.2.9 - 2021-04-05
- poprawiono wydajność działania
- poprawka zanikajacych ikon
- dodane nowe menu pobierania
- dodana opcja cachowania playlisty
- usunięte błędy

wersja 9.2.8 - 2021-02-27
- poprawka serwisu Telia Play