@@ -42,7 +42,8 @@
 		<email>support@m-tvguide.pl</email>
 	<news>v9.4.5 (2021-08-01)
 - Increased loading speed for playlist channels groups.
-	
+- Fixed login for service WP Pilot.
+
 v9.4.4 (2021-07-31)
 - Timebar fixes.
 - Added service Telewizja Polska.
